# c_graphics_task1

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: edu_math.h
src/: edu_math.c
test/: CMakeLists.txt  main.c
